syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "nftmngr/action.proto";

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

// TODO: [chore] Combine enable/disable to change virtual schema.
message VirtualSchemaProposal {
  string id = 1;
  ProposalType proposalType = 2;
  VirtualSchema virtualSchema = 3;
  repeated Action actions = 4;
  google.protobuf.Timestamp submitTime = 5
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  google.protobuf.Timestamp votingStartTime = 6
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  google.protobuf.Timestamp votingEndTime = 7
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}

message VirtualSchema {
  string virtualNftSchemaCode = 1;
  repeated VirtualSchemaRegistry registry = 2;
  bool enable = 3;
  // link wih virtual action. We will not put in here to reduce redundance info
}

// TODO: [chore] Combine enable/disable to change virtual schema.
message VirtualSchemaRegistry {
  string nftSchemaCode = 1;
  repeated string sharedAttributes = 2;
  RegistryStatus decision = 3;
}

message VirtualSchemaRegistryRequest {
  string nftSchemaCode = 1;
  repeated string sharedAttributes = 2;
}

message ActiveVirtualSchemaProposal { string id = 1; }

message InactiveVirtualSchemaProposal { string id = 1; }

enum RegistryStatus {
  PENDING = 0;
  REJECT = 1;
  ACCEPT = 2;
}

// TODO: [chore] Combine enable/disable to change virtual schema.
enum ProposalType {
  CREATE = 0;
  EDIT = 1;
}
